<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    style="@style/b_bg"  >
    
       	<!-- headline -->          
             <TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/view_options" 
			style="@style/b_h1"
  	  		android:gravity="center" />	
    
    <!--show button  -->
	    	<Button
			android:id="@+id/btn_go"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_show" />
	    	
	<!--back button  -->
	    	<Button
			android:id="@+id/btn_back"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/back" />
				    	

    

</LinearLayout>