<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
	 style="@style/b_bg"   >
    
    	
	<LinearLayout 
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content"
	 android:orientation="vertical"  >
	 
    <ImageView 
        android:src="@drawable/penguin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/view" />
    
    	<LinearLayout  
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    android:gravity="bottom"
	    >
	    
<!--back button  -->
	    	<Button
			android:id="@+id/btn_back"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/back" />
	    	
	   <!-- share Button -->
	   		<Button
			android:id="@+id/btn_share"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_share" />

	</LinearLayout  >
  </LinearLayout>
</ScrollView>